@@ -17,7 +17,7 @@ import junit.framework.*;
 
 /** Tests Publishers.
  *
- * @version $Id: TestPublisher.java,v 1.5 2002-01-08 11:25:24 anatom Exp $
+ * @version $Id: TestPublisher.java,v 1.6 2002-01-08 12:32:29 anatom Exp $
  */
 public class TestPublisher extends TestCase {
     
@@ -114,14 +114,14 @@ public class TestPublisher extends TestCase {
         assertTrue("Storing CRL failed", ret);
         cat.debug("<test03StoreCRL()");
     }
-    /*
+    
     public void test04StoreCRLAgain() throws Exception {
         cat.debug(">test04StoreCRLAgain()");
         boolean ret = pub.storeCRL(testcrl, null, 1);
         assertTrue("Storing CRL failed", ret);
         cat.debug("<test04StoreCRLAgain()");
     }
-     */
+    
     public void test05AddCACert() throws Exception {
         cat.debug(">test05AddCACert()");
         X509Certificate cacert = CertTools.getCertfromByteArray(testcacert);
