@@ -4,6 +4,8 @@ Tested with additional databases (mySQL, PostgreSQL).
 The Datasource used is configurable.
 New architecture for Publishers where certificates can be published in addition to the main database.
 Change DN order to match RFC1779. WARNING! See doc/RELEASE_NOTES for information about upgrading from v1.0.
+LDAP Publisher to store for certificates and CRLs in LDAP directory.
+Minor bugfixes.
 
 1.0
 ---
